--- a/tentacle-server/src/main/resources/static/tentacle.css
+++ b/tentacle-server/src/main/resources/static/tentacle.css
@@ -184,3 +184,18 @@ body
     text-align: center;
     margin-top: 20px;
 }
+.x-message-box
+{
+    position: absolute;
+    left: 50%;
+    width: 400px;
+    margin-left: -200px;
+    border-radius: 10px;
+    padding: 10px;
+    color: #ffffff;
+    font-size: 14px;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: none;
+    z-index: 1000000;
+}
