--- a/tentacle-server/src/main/resources/static/tentacle.css
+++ b/tentacle-server/src/main/resources/static/tentacle.css
@@ -47,13 +47,14 @@ body
     top: -10px;
     left: 50%;
     width: 500px;
-    height: 60px;
+    height: 40px;
     margin-left: -250px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.4);
-    padding-top: 30px;
+    padding-top: 20px;
+    padding-bottom: 10px;
     padding-right: 20px;
     padding-left: 20px;
 }
@@ -278,4 +279,88 @@ body
     background-color: rgba(0, 0, 0, 0.8);
     display: none;
     z-index: 1000000;
+}
+.x-dialog
+{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.8);
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    color: #ccc;
+    padding: 20px;
+}
+.x-dialog .x-title
+{
+    font-size: 18px;
+    color: #ccc;
+    text-align: center;
+    height: 60px;
+    line-height: 60px;
+}
+.x-dialog-clipboard
+{
+    width: 800px;
+    height: 600px;
+    margin-left: -400px;
+    margin-top: -300px;
+    display: none;
+}
+.x-dialog hr
+{
+    border-width: 0px 0px 1px 0px;
+    border-style: solid;
+    border-color: #444;
+}
+.x-dialog .x-actions
+{
+    text-align: center;
+    margin-top: 40px;
+}
+.x-dialog .btn
+{
+    outline: none;
+    border: solid 1px #999;
+    color: #ccc;
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 140px;
+    height: 40px;
+    font-size: 18px;
+    border-radius: 4px;
+}
+.x-dialog .btn:hover
+{
+    background-color: rgba(255, 255, 255, 0.2);
+    border: solid 1px #ccc;
+    cursor: pointer;
+}
+.x-dialog-clipboard textarea
+{
+    outline: none;
+    border: solid 1px #666;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    background-color: transparent;
+    width: 100%;
+    height: 180px;
+    color: #ccc;
+    font-size: 14px;
+    resize: none;
+    font-family: Consolas, monospace;
+}
+.x-dialog .x-title .x-close
+{
+    color: #dedede;
+    font-size: 10px;
+    float: right;
+    width: 16px;
+    height: 16px;
+    display: block;
+    background-image: url(./icon/close.png);
+    cursor: pointer;
+    margin-top: 22px;
 }
