完成屏幕画面下载功能

--- a/tentacle-server/src/main/resources/static/tentacle.css
+++ b/tentacle-server/src/main/resources/static/tentacle.css
@@ -81,6 +81,7 @@ body
     background-color: transparent;
     background-position: center;
     cursor: pointer;
+    display: block;
 }
 .x-cmd-bar .x-cmd-right
 {
