--- a/tentacle-server/src/main/resources/static/tentacle.css
+++ b/tentacle-server/src/main/resources/static/tentacle.css
@@ -310,6 +310,14 @@ body
     margin-top: -300px;
     display: none;
 }
+.x-dialog-keyboard
+{
+    width: 656px;
+    height: 400px;
+    margin-left: -328px;
+    margin-top: -200px;
+    display: none;
+}
 .x-dialog hr
 {
     border-width: 0px 0px 1px 0px;
@@ -327,10 +335,11 @@ body
     border: solid 1px #999;
     color: #ccc;
     background-color: rgba(0, 0, 0, 0.4);
-    width: 140px;
+    min-width: 140px;
     height: 40px;
     font-size: 18px;
     border-radius: 4px;
+    vertical-align: top;
 }
 .x-dialog .btn:hover
 {
@@ -364,4 +373,124 @@ body
     background-image: url(./icon/close.png);
     cursor: pointer;
     margin-top: 22px;
+}
+
+/* ********************************************** 虚拟键盘 ********************************************** */
+.x-keyboard
+{
+    background-color: #555;
+    padding: 10px;
+    display: inline-block;
+}
+.x-keyboard b
+{
+    background-color: #000;
+    color: #ccc;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    margin: 0px 2px 2px 0px;
+    text-align: center;
+    font-size: 9px;
+    font-weight: normal;
+    display: block;
+}
+.x-keyboard .x-pressed
+{
+    background-color: #efefef;
+    color: #000000;
+}
+.x-keyboard .x-align-left
+{
+    text-align: left;
+    text-indent: 10px;
+}
+.x-keyboard .x-align-right
+{
+    text-align: right;
+    padding-right: 10px;
+    box-sizing: border-box;
+}
+.x-keyboard .x-2b
+{
+    width: 45px !important;
+}
+.x-keyboard .x-3b
+{
+    width: 62px !important;
+}
+.x-keyboard .x-4b
+{
+    width: 70px !important;
+}
+.x-keyboard .x-spacebar
+{
+    width: 237px !important;
+}
+.x-keyboard .x-4b:last-child
+{
+    width: 69px !important;
+}
+.x-keyboard b, .x-keyboard i
+{
+    float: left;
+}
+.x-keyboard b:hover
+{
+    cursor: pointer;
+    background-color: #236;
+}
+.x-keyboard i
+{
+    width: 10px;
+    height: 30px;
+    margin: 0px 2px 2px 0px;
+}
+.x-keyboard sup
+{
+    font-size: 7px;
+    color: #666;
+    margin-left: 4px;
+}
+.x-keyboard .x-shiftkey, .x-keyboard .x-shiftkey b
+{
+    line-height: 24px;
+}
+.x-keyboard .x-funcs
+{
+    margin-bottom: 20px;
+}
+.x-keyboard .x-kb-main, .x-keyboard .x-kb-ctrl
+{
+    display: inline-block;
+    float: left;
+}
+.x-keyboard .x-kb-ctrl
+{
+    margin-left: 20px;
+}
+.x-keyboard .x-dir
+{
+    margin-top: 32px;
+    margin-left: 24px;
+    width: 100px;
+}
+.x-keyboard .x-dir b
+{
+    xfloat: none;
+    xdisplay: inline-block;
+    text-align: center;
+    font-size: 32px;
+}
+.x-keyboard .x-dir s
+{
+    width: 30px;
+    height: 30px;
+    float: left;
+    display: inline-block;
+    margin: 0px 2px 2px 0px;
+}
+.clearfix
+{
+    clear: both;
 }
