--- a/tentacle-server/src/main/resources/templates/keyboard.html
+++ b/tentacle-server/src/main/resources/templates/keyboard.html
@@ -131,132 +131,163 @@
 <body>
 <div class="x-keyboard">
     <div class="x-funcs">
-        <b class="x-2b">ESC</b>
+        <b class="x-2b" x-key="27">ESC</b>
         <i></i>
-        <b>F1</b>
-        <b>F2</b>
-        <b>F3</b>
-        <b>F4</b>
+        <b class="" x-key="112">F1</b>
+        <b class="" x-key="113">F2</b>
+        <b class="" x-key="114">F3</b>
+        <b class="" x-key="115">F4</b>
         <i></i>
-        <b>F5</b>
-        <b>F6</b>
-        <b>F7</b>
-        <b>F8</b>
+        <b class="" x-key="116">F5</b>
+        <b class="" x-key="117">F6</b>
+        <b class="" x-key="118">F7</b>
+        <b class="" x-key="119">F8</b>
         <i></i>
-        <b>F9</b>
-        <b>F10</b>
-        <b>F11</b>
-        <b>F12</b>
+        <b class="" x-key="120">F9</b>
+        <b class="" x-key="121">F10</b>
+        <b class="" x-key="122">F11</b>
+        <b class="" x-key="123">F12</b>
         <div class="clearfix"></div>
     </div>
     <div>
         <div class="x-kb-main">
             <div>
-                <b class="x-shiftkey">`<sup>~</sup></b>
+                <b class="x-shiftkey" x-key="192">`<sup>~</sup></b>
                 <i></i>
-                <b class="x-shiftkey">1<sup>!</sup></b>
-                <b class="x-shiftkey">2<sup>@</sup></b>
-                <b class="x-shiftkey">3<sup>#</sup></b>
-                <b class="x-shiftkey">4<sup>$</sup></b>
-                <b class="x-shiftkey">5<sup>%</sup></b>
-                <b class="x-shiftkey">6<sup>^</sup></b>
-                <b class="x-shiftkey">7<sup>&</sup></b>
-                <b class="x-shiftkey">8<sup>*</sup></b>
-                <b class="x-shiftkey">9<sup>(</sup></b>
-                <b class="x-shiftkey">0<sup>)</sup></b>
-                <b class="x-shiftkey">-<sup>_</sup></b>
-                <b class="x-shiftkey">=<sup>+</sup></b>
-                <b class="x-2b x-align-right">BACK</b>
+                <b class="x-shiftkey" x-key="49">1<sup>!</sup></b>
+                <b class="x-shiftkey" x-key="50">2<sup>@</sup></b>
+                <b class="x-shiftkey" x-key="51">3<sup>#</sup></b>
+                <b class="x-shiftkey" x-key="52">4<sup>$</sup></b>
+                <b class="x-shiftkey" x-key="53">5<sup>%</sup></b>
+                <b class="x-shiftkey" x-key="54">6<sup>^</sup></b>
+                <b class="x-shiftkey" x-key="55">7<sup>&amp;</sup></b>
+                <b class="x-shiftkey" x-key="56">8<sup>*</sup></b>
+                <b class="x-shiftkey" x-key="57">9<sup>(</sup></b>
+                <b class="x-shiftkey" x-key="48">0<sup>)</sup></b>
+                <b class="x-shiftkey" x-key="189">-<sup>_</sup></b>
+                <b class="x-shiftkey" x-key="187">=<sup>+</sup></b>
+                <b class="x-2b x-align-right" x-key="8">BACK</b>
                 <div class="clearfix"></div>
             </div>
             <div>
-                <b class="x-2b x-align-left">TAB</b>
+                <b class="x-2b x-align-left" x-key="9">TAB</b>
                 <i></i>
-                <b>Q</b>
-                <b>W</b>
-                <b>E</b>
-                <b>R</b>
-                <b>T</b>
-                <b>Y</b>
-                <b>U</b>
-                <b>I</b>
-                <b>O</b>
-                <b>P</b>
-                <b class="x-shiftkey">[<sup>{</sup></b>
-                <b class="x-shiftkey">]<sup>}</sup></b>
-                <b class="x-shiftkey">\<sup>|</sup></b>
+                <b class="" x-key="81">Q</b>
+                <b class="" x-key="87">W</b>
+                <b class="" x-key="69">E</b>
+                <b class="" x-key="82">R</b>
+                <b class="" x-key="84">T</b>
+                <b class="" x-key="89">Y</b>
+                <b class="" x-key="85">U</b>
+                <b class="" x-key="73">I</b>
+                <b class="" x-key="79">O</b>
+                <b class="" x-key="80">P</b>
+                <b class="x-shiftkey" x-key="219">[<sup>{</sup></b>
+                <b class="x-shiftkey" x-key="221">]<sup>}</sup></b>
+                <b class="x-shiftkey" x-key="220">\<sup>|</sup></b>
                 <div class="clearfix"></div>
             </div>
             <div>
-                <b class="x-2b x-align-left">CAPS</b>
+                <b class="x-2b x-align-left" x-key="20">CAPS</b>
                 <i></i>
-                <b>A</b>
-                <b>S</b>
-                <b>D</b>
-                <b>F</b>
-                <b>G</b>
-                <b>H</b>
-                <b>J</b>
-                <b>K</b>
-                <b>L</b>
-                <b class="x-pressed">;<sup>:</sup></b>
-                <b>'<sup>"</sup></b>
-                <b class="x-3b x-align-right">ENTER</b>
+                <b class="" x-key="65">A</b>
+                <b class="" x-key="83">S</b>
+                <b class="" x-key="68">D</b>
+                <b class="" x-key="70">F</b>
+                <b class="" x-key="71">G</b>
+                <b class="" x-key="72">H</b>
+                <b class="" x-key="74">J</b>
+                <b class="" x-key="75">K</b>
+                <b class="" x-key="76">L</b>
+                <b class="" x-key="186">;<sup>:</sup></b>
+                <b class="" x-key="222">'<sup>"</sup></b>
+                <b class="x-3b x-align-right" x-key="13">ENTER</b>
             </div>
             <div>
-                <b class="x-4b x-align-left">SHIFT</b>
+                <b class="x-4b x-align-left" x-key="16">SHIFT</b>
                 <i></i>
-                <b>Z</b>
-                <b>X</b>
-                <b>C</b>
-                <b>V</b>
-                <b>B</b>
-                <b>N</b>
-                <b>M</b>
-                <b>,<sup>&lt;</sup></b>
-                <b>.<sup>&gt;</sup></b>
-                <b>/<sup>?</sup></b>
-                <b class="x-4b x-align-right">SHIFT</b>
+                <b class="" x-key="90">Z</b>
+                <b class="" x-key="88">X</b>
+                <b class="" x-key="67">C</b>
+                <b class="" x-key="86">V</b>
+                <b class="" x-key="66">B</b>
+                <b class="" x-key="78">N</b>
+                <b class="" x-key="77">M</b>
+                <b class="" x-key="188">,<sup>&lt;</sup></b>
+                <b class="" x-key="190">.<sup>&gt;</sup></b>
+                <b class="" x-key="191">/<sup>?</sup></b>
+                <b class="x-4b x-align-right" x-key="16">SHIFT</b>
             </div>
             <div>
-                <b class="x-2b x-align-left">CTRL</b>
+                <b class="x-2b x-align-left" x-key="17">CTRL</b>
                 <i></i>
-                <b class="x-2b">ALT</b>
+                <b class="x-2b" x-key="18">ALT</b>
                 <i></i>
-                <b class="x-spacebar">SPACE</b>
+                <b class="x-spacebar" x-key="32">SPACE</b>
                 <i></i>
-                <b class="x-2b">ALT</b>
+                <b class="x-2b" x-key="18">ALT</b>
                 <i></i>
-                <b class="x-2b x-align-right">CTRL</b>
+                <b class="x-2b x-align-right" x-key="17">CTRL</b>
                 <div class="clearfix"></div>
             </div>
         </div>
         <div class="x-kb-ctrl">
             <div>
-                <b class="x-2b">INS</b>
-                <b class="x-2b">HOME</b>
-                <b class="x-2b">PGUP</b>
+                <b class="x-2b" x-key="45">INS</b>
+                <b class="x-2b" x-key="36">HOME</b>
+                <b class="x-2b" x-key="33">PGUP</b>
                 <div class="clearfix"></div>
             </div>
             <div>
-                <b class="x-2b">DEL</b>
-                <b class="x-2b">END</b>
-                <b class="x-2b">PGDN</b>
+                <b class="x-2b" x-key="46">DEL</b>
+                <b class="x-2b" x-key="35">END</b>
+                <b class="x-2b" x-key="34">PGDN</b>
                 <div class="clearfix"></div>
             </div>
             <div class="x-dir">
                 <s></s>
-                <b>&blacktriangle;</b>
+                <b class="" x-key="38">▴</b>
                 <s></s>
                 <div class="clearfix"></div>
-                <b>&blacktriangleleft;</b>
-                <b>&blacktriangledown;</b>
-                <b>&blacktriangleright;</b>
+                <b class="" x-key="37">◂</b>
+                <b class="" x-key="40">▾</b>
+                <b class="" x-key="39">▸</b>
                 <div class="clearfix"></div>
             </div>
         </div>
         <div class="clearfix"></div>
     </div>
 </div>
+<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<script type="text/javascript">
+    var keys = [];
+    $(document).ready(function()
+    {
+        $('.x-keyboard b').each(function()
+        {
+            $(this).removeClass('x-pressed');
+        });
+        $('.x-keyboard b').click(function()
+        {
+            var btn = $(this);
+            var key = btn.attr('x-key');
+            if (btn.hasClass('x-pressed'))
+            {
+                var newKeyList = [];
+                for (var i = 0; i < keys.length; i++)
+                {
+                    if (keys[i] != key) newKeyList.push(keys[i]);
+                }
+                keys = newKeyList;
+                btn.removeClass('x-pressed');
+            }
+            else
+            {
+                keys.push(key);
+                btn.addClass('x-pressed');
+            }
+        });
+    });
+</script>
 </body>
 </html>
