调整间距，对齐上

--- a/tentacle-server/src/main/resources/templates/keyboard.html
+++ b/tentacle-server/src/main/resources/templates/keyboard.html
@@ -92,6 +92,10 @@
         {
             margin-bottom: 20px;
         }
+        .x-keyboard .x-funcs i
+        {
+            width: 13px;
+        }
         .x-keyboard .x-kb-main, .x-keyboard .x-kb-ctrl
         {
             display: inline-block;
