--- a/tentacle-server/src/main/resources/templates/filemanager.html
+++ b/tentacle-server/src/main/resources/templates/filemanager.html
@@ -19,6 +19,8 @@
             padding: 10px;
             background-color: #333;
             width: 600px;
+            height: 400px;
+            overflow: auto;
             color: #efefef;
             font-size: 14px;
         }
@@ -40,6 +42,28 @@
             width: 16px;
             height: 16px;
             vertical-align: bottom;
+        }
+        ::-webkit-scrollbar
+        {
+            width: 5px;
+            height: 10px;
+            background-color: #eee;
+        }
+        ::-webkit-scrollbar-track
+        {
+            x-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);!important;
+            border-radius: 10px;
+            background-color: #555;
+        }
+        ::-webkit-scrollbar-thumb
+        {
+            border-radius: 10px;
+            x-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+            background-color: #0068a2;
+        }
+        ::-webkit-scrollbar-thumb:hover
+        {
+            background-color: #0088ca;
         }
     </style>
 </head>
@@ -70,6 +94,120 @@
             </tr>
             <tr>
                 <td><a href="#"><img src="../static/ftype/exe.ico" /> google-chrome-stable_amd64.deb</a></td>
+                <td align="center">-</td>
+                <td align="right">52231002</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/unknown.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
+                <td align="center">-</td>
+                <td align="right">317615978</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/image.ico" /> logstash-6.2.4.tar.gz</a></td>
+                <td align="center">Excel表格</td>
+                <td align="right">147224408</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/bt.ico" /> google-chrome-stable_amd64.deb</a></td>
+                <td align="center">-</td>
+                <td align="right">52231002</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/audio.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
+                <td align="center">-</td>
+                <td align="right">317615978</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/script.ico" /> logstash-6.2.4.tar.gz</a></td>
+                <td align="center">Excel表格</td>
+                <td align="right">147224408</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/access.ico" /> google-chrome-stable_amd64.deb</a></td>
+                <td align="center">-</td>
+                <td align="right">52231002</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/config.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
+                <td align="center">-</td>
+                <td align="right">317615978</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/font.ico" /> logstash-6.2.4.tar.gz</a></td>
+                <td align="center">Excel表格</td>
+                <td align="right">147224408</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/folder.ico" /> google-chrome-stable_amd64.deb</a></td>
+                <td align="center">-</td>
+                <td align="right">52231002</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/exe.ico" /> google-chrome-stable_amd64.deb</a></td>
+                <td align="center">-</td>
+                <td align="right">52231002</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/unknown.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
+                <td align="center">-</td>
+                <td align="right">317615978</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/image.ico" /> logstash-6.2.4.tar.gz</a></td>
+                <td align="center">Excel表格</td>
+                <td align="right">147224408</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/bt.ico" /> google-chrome-stable_amd64.deb</a></td>
+                <td align="center">-</td>
+                <td align="right">52231002</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/audio.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
+                <td align="center">-</td>
+                <td align="right">317615978</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/script.ico" /> logstash-6.2.4.tar.gz</a></td>
+                <td align="center">Excel表格</td>
+                <td align="right">147224408</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/access.ico" /> google-chrome-stable_amd64.deb</a></td>
+                <td align="center">-</td>
+                <td align="right">52231002</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/config.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
+                <td align="center">-</td>
+                <td align="right">317615978</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/font.ico" /> logstash-6.2.4.tar.gz</a></td>
+                <td align="center">Excel表格</td>
+                <td align="right">147224408</td>
+                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+            </tr>
+            <tr>
+                <td><a href="#"><img src="../static/ftype/folder.ico" /> google-chrome-stable_amd64.deb</a></td>
                 <td align="center">-</td>
                 <td align="right">52231002</td>
                 <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
