远程主机的文件浏览

--- a/tentacle-server/src/main/resources/templates/filemanager.html
+++ b/tentacle-server/src/main/resources/templates/filemanager.html
@@ -37,6 +37,13 @@
         {
             color: #999;
         }
+        .x-fmanager tbody td i
+        {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            text-align: center;
+        }
         .x-fmanager table tbody td img
         {
             width: 16px;
@@ -81,7 +88,7 @@
             </thead>
             <tbody>
             <tr>
-                <td><a href="#"><img src="../static/ftype/unknown.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
+                <td><i><img src="../static/ftype/folder.ico" /></i><a href="#">atlassian-jira-software-7.2.3-x64.bin</a></td>
                 <td align="center">-</td>
                 <td align="right">317615978</td>
                 <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
