--- a/tentacle-server/src/main/resources/static/tentacle.css
+++ b/tentacle-server/src/main/resources/static/tentacle.css
@@ -18,6 +18,28 @@ body
     min-height: 600px;
     background-color: #333333;
 }
+::-webkit-scrollbar
+{
+    width: 5px;
+    height: 10px;
+    background-color: #eee;
+}
+::-webkit-scrollbar-track
+{
+    x-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);!important;
+    border-radius: 10px;
+    background-color: #555;
+}
+::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    x-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #0068a2;
+}
+::-webkit-scrollbar-thumb:hover
+{
+    background-color: #0088ca;
+}
 .disable
 {
     pointer-events: none;
@@ -318,6 +340,14 @@ body
     margin-top: -200px;
     display: none;
 }
+.x-dialog-fmanager
+{
+    width: 600px;
+    height: 600px;
+    margin-left: -300px;
+    margin-top: -300px;
+    display: none;
+}
 .x-dialog hr
 {
     border-width: 0px 0px 1px 0px;
@@ -497,4 +527,46 @@ body
 .clearfix
 {
     clear: both;
+}
+
+/* ********************************************** 文件管理 ********************************************** */
+
+.x-fmanager
+{
+    width: 100%;
+    height: 400px;
+    color: #efefef;
+    font-size: 14px;
+    overflow: auto;
+}
+.x-fmanager table tbody tr:hover
+{
+    background-color: #000;
+}
+.x-fmanager .x-path
+{
+    height: 30px;
+    line-height: 30px;
+}
+.x-fmanager a, .x-fmanager a:visited
+{
+    color: #efefef;
+    text-decoration: none;
+}
+.x-fmanager tbody td i
+{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+}
+.x-fmanager .x-path a:hover
+{
+    color: #999;
+}
+.x-fmanager table tbody td img
+{
+    width: 16px;
+    height: 16px;
+    vertical-align: bottom;
 }
