--- a/tentacle-server/src/main/resources/templates/filemanager.html
+++ b/tentacle-server/src/main/resources/templates/filemanager.html
@@ -16,13 +16,15 @@
         }
         .x-fmanager
         {
-            padding: 10px;
-            background-color: #333;
             width: 600px;
             height: 400px;
-            overflow: auto;
             color: #efefef;
             font-size: 14px;
+        }
+        .x-fmanager .x-filelist
+        {
+            height: 360px;
+            overflow: auto;
         }
         .x-fmanager table tbody tr:hover
         {
@@ -32,6 +34,17 @@
         {
             height: 30px;
             line-height: 30px;
+            margin-bottom: 10px;
+            overflow: hidden;
+        }
+        .x-fmanager .x-path a
+        {
+            margin-right: 3px;
+            float: left;
+        }
+        .clearfix
+        {
+            clear: both;
         }
         .x-fmanager .x-path a:hover
         {
@@ -76,151 +89,165 @@
 </head>
 <body>
     <div class="x-fmanager">
-        <div class="x-path"><a href="#">/</a><a href="#">opt/</a><a href="#">software/</a></div>
-        <table cellpadding="4" cellspacing="0" border="1" width="100%">
-            <thead>
-            <tr>
-                <th align="left">文件名</th>
-                <th width="20%" align="center">类型</th>
-                <th width="20%" align="right">大小</th>
-                <th width="10%" align="center">-</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td><i><img src="../static/ftype/folder.ico" /></i><a href="#">atlassian-jira-software-7.2.3-x64.bin</a></td>
-                <td align="center">-</td>
-                <td align="right">317615978</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/zip.ico" /> logstash-6.2.4.tar.gz</a></td>
-                <td align="center">Excel表格</td>
-                <td align="right">147224408</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/exe.ico" /> google-chrome-stable_amd64.deb</a></td>
-                <td align="center">-</td>
-                <td align="right">52231002</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/unknown.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
-                <td align="center">-</td>
-                <td align="right">317615978</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/image.ico" /> logstash-6.2.4.tar.gz</a></td>
-                <td align="center">Excel表格</td>
-                <td align="right">147224408</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/bt.ico" /> google-chrome-stable_amd64.deb</a></td>
-                <td align="center">-</td>
-                <td align="right">52231002</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/audio.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
-                <td align="center">-</td>
-                <td align="right">317615978</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/script.ico" /> logstash-6.2.4.tar.gz</a></td>
-                <td align="center">Excel表格</td>
-                <td align="right">147224408</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/access.ico" /> google-chrome-stable_amd64.deb</a></td>
-                <td align="center">-</td>
-                <td align="right">52231002</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/config.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
-                <td align="center">-</td>
-                <td align="right">317615978</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/font.ico" /> logstash-6.2.4.tar.gz</a></td>
-                <td align="center">Excel表格</td>
-                <td align="right">147224408</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/folder.ico" /> google-chrome-stable_amd64.deb</a></td>
-                <td align="center">-</td>
-                <td align="right">52231002</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/exe.ico" /> google-chrome-stable_amd64.deb</a></td>
-                <td align="center">-</td>
-                <td align="right">52231002</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/unknown.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
-                <td align="center">-</td>
-                <td align="right">317615978</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/image.ico" /> logstash-6.2.4.tar.gz</a></td>
-                <td align="center">Excel表格</td>
-                <td align="right">147224408</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/bt.ico" /> google-chrome-stable_amd64.deb</a></td>
-                <td align="center">-</td>
-                <td align="right">52231002</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/audio.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
-                <td align="center">-</td>
-                <td align="right">317615978</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/script.ico" /> logstash-6.2.4.tar.gz</a></td>
-                <td align="center">Excel表格</td>
-                <td align="right">147224408</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/access.ico" /> google-chrome-stable_amd64.deb</a></td>
-                <td align="center">-</td>
-                <td align="right">52231002</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/config.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
-                <td align="center">-</td>
-                <td align="right">317615978</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/font.ico" /> logstash-6.2.4.tar.gz</a></td>
-                <td align="center">Excel表格</td>
-                <td align="right">147224408</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            <tr>
-                <td><a href="#"><img src="../static/ftype/folder.ico" /> google-chrome-stable_amd64.deb</a></td>
-                <td align="center">-</td>
-                <td align="right">52231002</td>
-                <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
-            </tr>
-            </tbody>
-        </table>
+        <div class="x-path">
+            <a href="javascript:;">C:\</a>
+            <a href="javascript:;">Users\</a>
+            <a href="javascript:;">matrixy\</a>
+            <a href="javascript:;">IdeaProjects\</a>
+            <a href="javascript:;">tentacle\</a>
+            <a href="javascript:;">tentacle-server\</a>
+            <a href="javascript:;">src\</a>
+            <a href="javascript:;">main\</a>
+            <a href="javascript:;">resources\</a>
+            <a href="javascript:;">templates\</a>
+            <div class="clearfix"></div>
+        </div>
+        <div class="x-filelist">
+            <table cellpadding="4" cellspacing="0" border="1" width="100%">
+                <thead>
+                <tr>
+                    <th align="left">文件名</th>
+                    <th width="20%" align="center">类型</th>
+                    <th width="20%" align="right">大小</th>
+                    <th width="10%" align="center">-</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td><i><img src="../static/ftype/folder.ico" /></i><a href="#">atlassian-jira-software-7.2.3-x64.bin</a></td>
+                    <td align="center">-</td>
+                    <td align="right">317615978</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/zip.ico" /> logstash-6.2.4.tar.gz</a></td>
+                    <td align="center">Excel表格</td>
+                    <td align="right">147224408</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/exe.ico" /> google-chrome-stable_amd64.deb</a></td>
+                    <td align="center">-</td>
+                    <td align="right">52231002</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/unknown.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
+                    <td align="center">-</td>
+                    <td align="right">317615978</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/image.ico" /> logstash-6.2.4.tar.gz</a></td>
+                    <td align="center">Excel表格</td>
+                    <td align="right">147224408</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/bt.ico" /> google-chrome-stable_amd64.deb</a></td>
+                    <td align="center">-</td>
+                    <td align="right">52231002</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/audio.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
+                    <td align="center">-</td>
+                    <td align="right">317615978</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/script.ico" /> logstash-6.2.4.tar.gz</a></td>
+                    <td align="center">Excel表格</td>
+                    <td align="right">147224408</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/access.ico" /> google-chrome-stable_amd64.deb</a></td>
+                    <td align="center">-</td>
+                    <td align="right">52231002</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/config.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
+                    <td align="center">-</td>
+                    <td align="right">317615978</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/font.ico" /> logstash-6.2.4.tar.gz</a></td>
+                    <td align="center">Excel表格</td>
+                    <td align="right">147224408</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/folder.ico" /> google-chrome-stable_amd64.deb</a></td>
+                    <td align="center">-</td>
+                    <td align="right">52231002</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/exe.ico" /> google-chrome-stable_amd64.deb</a></td>
+                    <td align="center">-</td>
+                    <td align="right">52231002</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/unknown.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
+                    <td align="center">-</td>
+                    <td align="right">317615978</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/image.ico" /> logstash-6.2.4.tar.gz</a></td>
+                    <td align="center">Excel表格</td>
+                    <td align="right">147224408</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/bt.ico" /> google-chrome-stable_amd64.deb</a></td>
+                    <td align="center">-</td>
+                    <td align="right">52231002</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/audio.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
+                    <td align="center">-</td>
+                    <td align="right">317615978</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/script.ico" /> logstash-6.2.4.tar.gz</a></td>
+                    <td align="center">Excel表格</td>
+                    <td align="right">147224408</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/access.ico" /> google-chrome-stable_amd64.deb</a></td>
+                    <td align="center">-</td>
+                    <td align="right">52231002</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/config.ico" /> atlassian-jira-software-7.2.3-x64.bin</a></td>
+                    <td align="center">-</td>
+                    <td align="right">317615978</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/font.ico" /> logstash-6.2.4.tar.gz</a></td>
+                    <td align="center">Excel表格</td>
+                    <td align="right">147224408</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                <tr>
+                    <td><a href="#"><img src="../static/ftype/folder.ico" /> google-chrome-stable_amd64.deb</a></td>
+                    <td align="center">-</td>
+                    <td align="right">52231002</td>
+                    <td align="center"><a href="#"><img src="../static/icon/download.png" /></a></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </body>
 </html>
