做成圆角的好看

--- a/tentacle-server/src/main/resources/static/tentacle.css
+++ b/tentacle-server/src/main/resources/static/tentacle.css
@@ -104,6 +104,7 @@ body
     background-position: center;
     cursor: pointer;
     display: block;
+    border-radius: 5px;
 }
 .x-cmd-bar .x-cmd-right
 {
