--- a/tentacle-server/src/main/resources/static/tentacle.css
+++ b/tentacle-server/src/main/resources/static/tentacle.css
@@ -677,3 +677,17 @@ body
 {
     color: #ffffff;
 }
+button
+{
+    position: relative;
+}
+button input[type=file]
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    top: 0px;
+    left: 0px;
+    cursor: pointer;
+}
