--- a/tentacle-server/src/main/resources/static/proton/plugins/fullcalendar/css/fullcalendar.css
+++ b/tentacle-server/src/main/resources/static/proton/plugins/fullcalendar/css/fullcalendar.css
@@ -123,7 +123,7 @@ html .fc,
 	border: 1px solid #ddd;
 	}
 	
-.fc-state-highlight { /* <td> today cell */ /* TODO: add .fc-today to <th> */
+.fc-state-highlight { /* <td> today cell */ /* TODO: arrange .fc-today to <th> */
 	background: #fcf8e3;
 	}
 	
